@@ -10,7 +10,6 @@ Short term
  - split navigation through mails when there're more than 20 mails.
  - Cleaner BiDi support (arabic for example) with mailbox display.
  - Translate the charset in the mail headers to the charset chosen at login. 
- - Trim Subject when too long (55 chars ?).
  - Colored quotes.
  - Better error handling.
  - Should warn when smtp relaying is forbidden instead of silently pretending
