@@ -1,4 +1,4 @@
-<!-- start of $Id: html_inbox.php,v 1.29 2002/03/21 08:58:45 rossigee Exp $ -->
+<!-- start of $Id: html_inbox.php,v 1.30 2002/03/24 17:08:02 wolruf Exp $ -->
 <tr bgcolor="<?php echo $glob_theme->inbox_color ?>">
     <td align="center">
         <input type="checkbox" name="msg-<?php echo $tmp['number'] ?>" value="Y" />
@@ -15,7 +15,7 @@
         <a href="<?php echo $PHP_SELF ?>?action=aff_mail&amp;mail=<?php echo $tmp['number'] ?>&amp;sort=<?php echo $sort ?>&amp;sortdir=<?php echo $sortdir?>&amp;verbose=0&amp;lang=<?php echo $lang ?>" title="<?php echo htmlspecialchars($tmp['from']); ?>"><?php echo htmlspecialchars(display_address ($tmp['from'])); ?></a>
     </td>
     <td class="inbox" align="left">
-        <a href="<?php echo $PHP_SELF ?>?action=aff_mail&amp;mail=<?php echo $tmp['number'] ?>&amp;sort=<?php echo $sort ?>&amp;sortdir=<?php echo $sortdir?>&amp;verbose=0&amp;lang=<?php echo $lang ?>"><?php echo $tmp['subject']? htmlspecialchars($tmp['subject']) : $html_nosubject; ?></a>
+        <a href="<?php echo $PHP_SELF ?>?action=aff_mail&amp;mail=<?php echo $tmp['number'] ?>&amp;sort=<?php echo $sort ?>&amp;sortdir=<?php echo $sortdir?>&amp;verbose=0&amp;lang=<?php echo $lang ?>" title="<?php echo $tmp['subject']? htmlspecialchars($tmp['subject']) : $html_nosubject; ?>"><?php echo $tmp['subject']? substr(htmlspecialchars($tmp['subject']), 0, 55) : $html_nosubject; ?></a>
     </td>
     <td class="inbox" align="left">
         <?php echo $tmp['date'] ?>
@@ -24,4 +24,4 @@
         <?php echo $tmp['size'] ?> <?php echo $html_kb ?>
     </td>
 </tr>
-<!-- end of $Id: html_inbox.php,v 1.29 2002/03/21 08:58:45 rossigee Exp $ -->
+<!-- end of $Id: html_inbox.php,v 1.30 2002/03/24 17:08:02 wolruf Exp $ -->
